feat(docker-compose): add mail configuration environment variables Added environment variables for mail configuration to enable mail functionality in the application.

--- a/docmost/docker-compose.yml
+++ b/docmost/docker-compose.yml
@@ -13,8 +13,14 @@ services:
       APP_SECRET: '${APP_SECRET}'
       DATABASE_URL: 'postgresql://docmost:W8oxymw3MdQuxbE6cETJhWmUXaTpRVJ6@docmost-db:5432/docmost?schema=public'
       REDIS_URL: 'redis://redis:6379'
-    ports:
-      - "3000:3000"
+      MAIL_DRIVER: "smtp"
+      SMTP_HOST: "in-v3.mailjet.com"
+      SMTP_PORT: "587"
+      SMTP_USERNAME: "${SMTP_USERNAME}"
+      SMTP_PASSWORD: "${SMTP_PASSWORD}"
+      SMTP_SECURE: "true"
+      MAIL_FROM_ADDRESS: "docmost@ozeliurs.com"
+      MAIL_FROM_NAME: "Docmost"
     volumes:
       - docmost:/app/data/storage
     networks:
