refactor(check-collisions.yaml): update service name collision detection to use docker compose ps The script now uses docker compose ps to get the list of services, which is a more reliable and efficient way to detect service name collisions.

--- a/.github/workflows/check-collisions.yaml
+++ b/.github/workflows/check-collisions.yaml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Check for service name collisions
         run: |
-          services=$(find . -name 'docker-compose.yml' -exec grep -h '^[[:space:]]*[^#[:space:]].*:' {} \; | awk -F: '{print $1}' | sort | uniq -d)
+          services=$(find . -name 'docker-compose.yml' -exec docker compose ps --services -f {} + | sort | uniq -d)
           if [ -n "$services" ]; then
             echo "Error: Service name collisions found:"
             echo "$services"
