refactor(check-collisions.yaml): simplify service name collision check Removed unnecessary logic for handling service name collisions, focusing solely on finding and listing the collisions.

--- a/.github/workflows/check-collisions.yaml
+++ b/.github/workflows/check-collisions.yaml
@@ -12,11 +12,4 @@ jobs:
 
       - name: Check for service name collisions
         run: |
-          services=$(find . -name 'docker-compose.yml' -exec docker compose -f {} ps --services \; | sort | uniq -d)
-          if [ -n "$services" ]; then
-            echo "Error: Service name collisions found:"
-            echo "$services"
-            exit 1
-          else
-            echo "No service name collisions found."
-          fi
+          services=$(find . -name 'docker-compose.yml' -exec docker compose -f {} ps --services \;)
