--- a/.github/workflows/check-collisions.yaml
+++ b/.github/workflows/check-collisions.yaml
@@ -12,4 +12,4 @@ jobs:
 
       - name: Check for service name collisions
         run: |
-          services=$(find . -name 'docker-compose.yml' -exec docker compose up -f {} -d --dry-run \;)
+          services=$(find . -name 'docker-compose.yml' -exec docker compose -f {} up -d --dry-run \;)
