refactor(check-collisions.yaml): improve service name collision detection The script now captures and displays service name collisions more accurately by parsing the output of docker compose and filtering out duplicate service names.

--- a/.github/workflows/check-collisions.yaml
+++ b/.github/workflows/check-collisions.yaml
@@ -12,4 +12,5 @@ jobs:
 
       - name: Check for service name collisions
         run: |
-          services=$(find . -name 'docker-compose.yml' -exec docker compose -f {} up -d --dry-run \;)
+          services=$(find . -name 'docker-compose.yml' -exec docker compose -f {} up -d --dry-run \; 2>&1 | grep 'DRY-RUN MODE -  Container' | awk '{print $6}' | sort | uniq -d)
+          echo "Found service name collisions: $services"
