--- a/.github/workflows/check-collisions.yaml
+++ b/.github/workflows/check-collisions.yaml
@@ -12,5 +12,5 @@ jobs:
 
       - name: Check for service name collisions
         run: |
-          services=$(find . -name 'docker-compose.yml' -exec docker compose -f {} up -d --dry-run \; 2>&1 | grep 'DRY-RUN MODE -  Container' | awk '{print $5}' | sort | uniq -d)
+          services=$(find . -name 'docker-compose.yml' -exec yg -o 'services.*' {} + | awk -F ' ' '{print $2}' | sort | uniq -d)
           echo "Found service name collisions: $services"
