refactor(check-collisions.yaml): improve service name collision detection The script for detecting service name collisions has been refactored to use yq's eval function, which allows for more efficient and accurate extraction of service names from docker-compose.yml files.

--- a/.github/workflows/check-collisions.yaml
+++ b/.github/workflows/check-collisions.yaml
@@ -12,5 +12,7 @@ jobs:
 
       - name: Check for service name collisions
         run: |
-          services=$(find . -name 'docker-compose.yml' -exec yq -o 'services.*' {} + | awk -F ' ' '{print $2}' | sort | uniq -d)
+          find . -name 'docker-compose.yml' -exec yq eval '.services | keys | .[]' {} +
+          find . -name 'docker-compose.yml' -exec yq eval '.services | keys | .[]' {} + | sort | uniq -d
+          services=$(find . -name 'docker-compose.yml' -exec yq eval '.services | keys | .[]' {} + | sort | uniq -d)
           echo "Found service name collisions: $services"
