--- a/docmost/docker-compose.yml
+++ b/docmost/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       APP_URL: 'https://docmost.ozeliurs.com'
       APP_SECRET: '${APP_SECRET}'
-      DATABASE_URL: 'postgresql://docmost:W8oxymw3MdQuxbE6cETJhWmUXaTpRVJ6@docmost-db:5432/docmost?schema=public'
+      DATABASE_URL: 'postgresql://docmost:${POSTGRES_PASSWORD}@docmost-db:5432/docmost?schema=public'
       REDIS_URL: 'redis://redis:6379'
       MAIL_DRIVER: "smtp"
       SMTP_HOST: "in-v3.mailjet.com"
@@ -38,7 +38,7 @@ services:
     environment:
       POSTGRES_DB: docmost
       POSTGRES_USER: docmost
-      POSTGRES_PASSWORD: W8oxymw3MdQuxbE6cETJhWmUXaTpRVJ6
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
