--- a/infisical/docker-compose.yml
+++ b/infisical/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         condition: service_healthy
     image: infisical/infisical:latest-postgres
     environment:
-      DB_CONNECTION_URI: "postgresql://infisical:infisical@infisical-db:5432/infisical"
+      DB_CONNECTION_URI: "postgresql://infisical:${POSTGRES_PASSWORD}@infisical-db:5432/infisical"
     command: npm run migration:latest
     networks:
       - traefik
@@ -26,7 +26,7 @@ services:
     image: infisical/infisical:latest-postgres
     environment:
       SITE_URL: "https://infisical.ozeliurs.com"
-      DB_CONNECTION_URI: "postgresql://infisical:infisical@infisical-db:5432/infisical"
+      DB_CONNECTION_URI: "postgresql://infisical:${POSTGRES_PASSWORD}@infisical-db:5432/infisical"
       REDIS_URL: "redis://redis:6379"
 
       ENCRYPTION_KEY: $ENCRYPTION_KEY
@@ -69,7 +69,7 @@ services:
     environment:
       POSTGRES_PASSWORD: "infisical"
       POSTGRES_USER: "infisical"
-      POSTGRES_DB: "infisical"
+      POSTGRES_DB: ${POSTGRES_PASSWORD}
     volumes:
       - pg_data:/var/lib/postgresql/data
     networks:
