fix(docker-compose.yml): correct volume name from 'magneticod-data' to 'magnetico-data' to match service name The volume name is now consistent with the service name, ensuring correct mapping and avoiding potential issues.

--- a/magnetico/docker-compose.yml
+++ b/magnetico/docker-compose.yml
@@ -21,7 +21,7 @@ networks:
     external: true
 
 volumes:
-  magneticod-data:
+  magnetico-data:
     driver: local
     driver_opts:
       type: none
