--- a/magnetico/docker-compose.yml
+++ b/magnetico/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  tgragnato:
+  magnetico:
     image: "ghcr.io/tgragnato/magnetico:latest"
     container_name: "magnetico"
     restart: unless-stopped
