--- a/.github/workflows/scripts.yaml
+++ b/.github/workflows/scripts.yaml
@@ -1,4 +1,4 @@
-name: Validate Docker Compose
+name: "Scripts"
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Validate Docker Compose
+      - name: Verify that all .on-update.sh files are executable
         run: |
           exit_code=0
           for file in $(find . -name '.on-update.sh'); do
@@ -25,3 +25,6 @@ jobs:
             fi
           done
           exit $exit_code
+
+      - name: Shellcheck
+        uses: ludeeus/action-shellcheck@master
