--- a/.github/workflows/scripts.yaml
+++ b/.github/workflows/scripts.yaml
@@ -26,5 +26,12 @@ jobs:
           done
           exit $exit_code
 
+  shellcheck:
+    runs-on: ubuntu-latest
+    needs: execute-check
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Shellcheck
         uses: ludeeus/action-shellcheck@master
