chore(ci): add pull request trigger for main branch and improve error handling in workflows and scripts

--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
   pull_request:
-    types: [ opened, synchronize, reopened ]
+    types: [opened, synchronize, reopened]
+    branches:
+      - main
 
 jobs:
   sonar-analysis:
