--- a/forgejo-runner/docker-compose.yml
+++ b/forgejo-runner/docker-compose.yml
@@ -9,8 +9,8 @@ services:
   gitea:
     image: "code.forgejo.org/forgejo/runner:3.4.1"
     container_name: "forgejo-runner"
-    command: '/bin/sh -c "while : ; do sleep 1 ; done ;"'
-    # command: '/bin/sh -c "sleep 5; forgejo-runner daemon"'
+    # command: '/bin/sh -c "while : ; do sleep 1 ; done ;"'
+    command: '/bin/sh -c "sleep 5; forgejo-runner daemon"'
     restart: "unless-stopped"
     links:
       - docker-in-docker
