--- a/forgejo-runner/docker-compose.yml
+++ b/forgejo-runner/docker-compose.yml
@@ -1,24 +1,59 @@
 services:
   docker-in-docker:
-    image: docker:dind
+    image: code.forgejo.org/oci/docker:dind
     container_name: "docker_dind"
-    privileged: "true"
-    command: ["dockerd", "-H", "tcp://0.0.0.0:2375", "--tls=false"]
-    restart: "unless-stopped"
+    hostname: docker
+    privileged: true
+    environment:
+      DOCKER_TLS_CERTDIR: /certs
+      DOCKER_HOST: docker-in-docker
+    volumes:
+      - docker_certs:/certs
+    restart: unless-stopped
 
-  gitea:
-    image: "code.forgejo.org/forgejo/runner:3.4.1"
-    container_name: "forgejo-runner"
-    # command: '/bin/sh -c "while : ; do sleep 1 ; done ;"'
-    command: '/bin/sh -c "sleep 5; forgejo-runner daemon"'
-    restart: "unless-stopped"
+  runner-register:
+    image: code.forgejo.org/forgejo/runner:3.4.1
+    container_name: "forgejo-runner-register"
     links:
       - docker-in-docker
-    depends_on:
-      docker-in-docker:
-        condition: service_started
     environment:
-      DOCKER_HOST: tcp://docker-in-docker:2375
-    user: 1001:1001
+      DOCKER_HOST: tcp://docker-in-docker:2376
     volumes:
       - /mnt/appdata/forgejo-runner:/data
+    user: 0:0
+    command: >-
+      bash -ec '
+      while : ; do
+        forgejo-runner create-runner-file --connect --instance ${FORGEJO_INSTANCE_URL} --name dunite --secret ${SHARED_SECRET} && break ;
+        sleep 1 ;
+      done ;
+      sed -i -e "s|\"labels\": null|\"labels\": [\"docker:docker://code.forgejo.org/oci/node:20-bookworm\", \"ubuntu-22.04:docker://catthehacker/ubuntu:act-22.04\"]|" .runner ;
+      forgejo-runner generate-config > config.yml ;
+      sed -i -e "s|network: .*|network: host|" config.yml ;
+      sed -i -e "s|^  envs:$$|  envs:\n    DOCKER_HOST: tcp://docker:2376\n    DOCKER_TLS_VERIFY: 1\n    DOCKER_CERT_PATH: /certs/client|" config.yml ;
+      sed -i -e "s|^  options:|  options: -v /certs/client:/certs/client|" config.yml ;
+      sed -i -e "s|  valid_volumes: \[\]$$|  valid_volumes:\n    - /certs/client|" config.yml ;
+      chown -R 1001:1001 /data
+      '
+
+  runner-daemon:
+    image: code.forgejo.org/forgejo/runner:3.4.1
+    container_name: "forgejo-runner-daemon"
+    links:
+      - docker-in-docker
+    environment:
+      DOCKER_HOST: tcp://docker:2376
+      DOCKER_CERT_PATH: /certs/client
+      DOCKER_TLS_VERIFY: "1"
+    volumes:
+      - /mnt/appdata/forgejo-runner:/data
+      - docker_certs:/certs
+    command: >-
+      bash -c '
+      while : ; do test -w .runner && forgejo-runner --config config.yml daemon ; sleep 1 ; done
+      '
+    restart: unless-stopped
+    user: 1001:1001
+
+volumes:
+  docker_certs:
