--- a/cdn/Caddyfile
+++ b/cdn/Caddyfile
@@ -1,4 +1,12 @@
 :80 {
     root * /cdn
     file_server browse
+
+    @privateFolder {
+        path /private/*
+    }
+
+    basicauth @privateFolder {
+        admin:$2y$05$fzav5O8FcY7imP9FAjxgb./NUjrpUd3/tuYBm6.tHwfpKj5kqVsIG
+    }
 }
