--- a/analyst-helper/docker-compose.yml
+++ b/analyst-helper/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ghcr.io/ozeliurs/analyst-helper-frontend:main
     container_name: analyst-frontend
     environment:
-      - API_URL=https://api.analyst.ozeliurs.com
+      - API_URL=https://api_analyst.ozeliurs.com
     depends_on:
       - analyst-backend
     networks:
@@ -29,7 +29,7 @@ services:
       - traefik
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`api.analyst.ozeliurs.com`)"
+      - "traefik.http.routers.backend.rule=Host(`api_analyst.ozeliurs.com`)"
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.tls.certresolver=letsencrypt"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
